--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
       <version>1.10.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>realize</groupId>
+      <artifactId>realize</artifactId>
+      <version>2019-04-24</version>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
